# cli

./: README.md  pyproject.toml
cli/: __init__.py  main.py
